--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -1,11 +1,13 @@
-.homePage{
+.homePage {
   display: flex;
   flex-direction: column;
-  .equNum{
+
+  .equNum {
     display: flex;
     justify-content: space-between;
     margin-bottom: 12px;
-    .equ1{
+
+    .equ1 {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -13,6 +15,7 @@
       width: 22%;
       height: 74px;
       background: #fff;
+
       .equImg6 {
         display: inline-block;
         width: 46px;
@@ -20,30 +23,36 @@
         background: url("../../style/ztt/imgs/todays.png") no-repeat;
         background-size: 100% 100%;
       }
+
       .equContext {
         display: flex;
         flex-direction: column;
-        padding-left:28px;
-        .equBer{
+        padding-left: 28px;
+
+        .equBer {
           font-size: 22px;
         }
-        .equipName{
+
+        .equipName {
           color: #354D9D;
           font-weight: bold;
           font-size: 15px;
           padding-bottom: 4px;
         }
-        .equipTotal{
+
+        .equipTotal {
           color: #385BD1;
           letter-spacing: 1px;
         }
-        .equipTotal-today{
+
+        .equipTotal-today {
           color: #FF7200;
           letter-spacing: 1px;
         }
       }
     }
-    .equ{
+
+    .equ {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -51,61 +60,72 @@
       width: 15%;
       height: 74px;
       background: #fff;
-      .equContext{
+
+      .equContext {
         display: flex;
         flex-direction: column;
-        padding-left:26px;
-        .equBer{
+        padding-left: 26px;
+
+        .equBer {
           font-size: 22px;
         }
-        .equipName{
+
+        .equipName {
           color: #354D9D;
           font-size: 15px;
           font-weight: bolder;
           padding-bottom: 4px;
         }
-        .equipTotal{
+
+        .equipTotal {
           color: #385BD1;
           letter-spacing: 1px;
         }
-        .equipTotal-Handle{
+
+        .equipTotal-Handle {
           color: #1877FF;
-          letter-spacing:1px;
+          letter-spacing: 1px;
         }
-        .equipTotal-UHandle{
+
+        .equipTotal-UHandle {
           color: #656A7B;
           letter-spacing: 1px;
         }
       }
-      .equImg1{
+
+      .equImg1 {
         display: inline-block;
         width: 46px;
         height: 46px;
         background: url("../../style/ztt/imgs/Total.png") no-repeat;
         background-size: 100% 100%;
       }
-      .equImg2{
+
+      .equImg2 {
         display: inline-block;
         width: 46px;
         height: 46px;
         background: url("../../style/ztt/imgs/equipment.png") no-repeat;
         background-size: 100% 100%;
       }
-      .equImg3{
+
+      .equImg3 {
         display: inline-block;
         width: 46px;
         height: 46px;
         background: url("../../style/ztt/imgs/offline.png") no-repeat;
         background-size: 100% 100%;
       }
-      .equImg4{
+
+      .equImg4 {
         display: inline-block;
         width: 46px;
         height: 46px;
         background: url("../../style/ztt/imgs/processed.png") no-repeat;
         background-size: 100% 100%;
       }
-      .equImg5{
+
+      .equImg5 {
         display: inline-block;
         width: 46px;
         height: 46px;
@@ -114,51 +134,62 @@
       }
     }
   }
-  .computerRoom{
+
+  .computerRoom {
     display: flex;
     flex-direction: row;
-    .computerRoom-context{
+
+    .computerRoom-context {
       width: 78%;
       background: #fff;
       margin-right: 11px;
-      .RoomStatusLeft{
+
+      .RoomStatusLeft {
         width: 30%;
       }
-      .computerRoomStatus{
+
+      .computerRoomStatus {
         display: flex;
         flex-direction: row;
-        .RoomStatusLeft{
-          .roomAlarm{
+
+        .RoomStatusLeft {
+          .roomAlarm {
             display: flex;
             align-items: center;
             margin: 28px 55px;
-            .status1{
+
+            .status1 {
               color: #ff7200;
               margin-left: 12px;
             }
-            .status2{
+
+            .status2 {
               color: #006cff;
               margin-left: 12px;
             }
-            .status3{
+
+            .status3 {
               color: #686d7e;
               margin-left: 12px;
             }
-            .statusImg1{
+
+            .statusImg1 {
               display: inline-block;
               width: 26px;
               height: 26px;
               background: url("../../style/ztt/imgs/alarmStatus.png") no-repeat;
               background-size: 100% 100%;
             }
-            .statusImg2{
+
+            .statusImg2 {
               display: inline-block;
               width: 26px;
               height: 26px;
               background: url("../../style/ztt/imgs/noStatus.png") no-repeat;
               background-size: 100% 100%;
             }
-            .statusImg3{
+
+            .statusImg3 {
               display: inline-block;
               width: 26px;
               height: 26px;
@@ -167,26 +198,30 @@
             }
           }
         }
-        .computer{
+
+        .computer {
           width: 55%;
         }
       }
 
-      .computerRoom-title{
+      .computerRoom-title {
         color: #213c95;
         font-size: 18px;
         margin: 15px 55px;
       }
     }
-    .computerRoom-camera{
+
+    .computerRoom-camera {
       width: 22%;
-      .video-camera{
+
+      .video-camera {
         display: flex;
         align-items: center;
         height: 50px;
         background: #fff;
         margin-bottom: 4px;
-        .videoImg{
+
+        .videoImg {
           display: inline-block;
           width: 24px;
           height: 24px;
@@ -194,18 +229,21 @@
           background-size: 100% 100%;
           margin-left: 20px;
         }
-        .videoName{
-          color:#FF7E1D;
+
+        .videoName {
+          color: #FF7E1D;
           margin-left: 8px;
           font-size: 15px;
         }
       }
-      .eqiIp{
+
+      .eqiIp {
         display: flex;
         flex-direction: row;
         height: 70px;
         margin-bottom: 3px;
-        .eqiIp-context{
+
+        .eqiIp-context {
           display: flex;
           flex-direction: column;
           justify-content: center;
@@ -214,7 +252,8 @@
           color: #2E4699;
           padding-left: 26px;
         }
-        .eqiIp-UHanld{
+
+        .eqiIp-UHanld {
           display: flex;
           flex-direction: column;
           justify-content: center;
@@ -228,16 +267,19 @@
           white-space: nowrap;
         }
       }
-      .fortification{
+
+      .fortification {
         height: 135px;
         background: #fff;
         text-align: center;
-        margin-bottom:4px;
-        .fortification-title{
+        margin-bottom: 4px;
+
+        .fortification-title {
           display: flex;
           align-items: center;
           padding: 8px 0;
-          .videoImg{
+
+          .videoImg {
             display: inline-block;
             width: 24px;
             height: 24px;
@@ -245,51 +287,62 @@
             background-size: 100% 100%;
             margin-left: 20px;
           }
-          .videoName{
-            color:#FF7E1D;
+
+          .videoName {
+            color: #FF7E1D;
             margin-left: 8px;
             font-size: 15px;
           }
         }
-        .defended{
+
+        .defended {
           display: flex;
           justify-content: center;
-          .defended-title{
+
+          .defended-title {
             width: 30%;
             display: flex;
             justify-content: center;
             flex-direction: column;
-            .defended-name{
+
+            .defended-name {
               text-align: center;
               cursor: pointer;
             }
-            .defendedBorder1{
+
+            .defendedBorder1 {
               display: inline-block;
               height: 3px;
               margin: 4px 0;
               cursor: pointer;
             }
-            .defendedBorder2{
+
+            .defendedBorder2 {
               display: inline-block;
               height: 3px;
               margin: 4px 0;
               cursor: pointer;
             }
-            .defendedBorder1bg{
+
+            .defendedBorder1bg {
               background-color: #006CFF;
             }
-            .defendedBorder1Color{
+
+            .defendedBorder1Color {
               color: #006CFF;
             }
-            .defendedBorder2bg{
+
+            .defendedBorder2bg {
               background-color: #D3D3D3;
             }
-            .defendedBorder2Color{
+
+            .defendedBorder2Color {
               color: #D3D3D3;
             }
           }
         }
-        .defendedBtn{
+
+        .defendedBtn {
           width: 40%;
           height: 30px;
           text-align: center;
@@ -299,7 +352,8 @@
           margin: 10px 0;
           font-size: 14px;
         }
-        .defendedBtn1{
+
+        .defendedBtn1 {
           width: 40%;
           height: 30px;
           text-align: center;
@@ -310,13 +364,16 @@
           font-size: 14px;
         }
       }
-      .lastAlarm{
+
+      .lastAlarm {
         background-color: #fff;
         padding: 18px 0;
-        .alarm-title{
+
+        .alarm-title {
           display: flex;
           align-items: center;
-          .videoImg{
+
+          .videoImg {
             display: inline-block;
             width: 24px;
             height: 24px;
@@ -324,38 +381,44 @@
             background-size: 100% 100%;
             margin-left: 20px;
           }
-          .videoName{
-            color:#FF7E1D;
+
+          .videoName {
+            color: #FF7E1D;
             margin-left: 8px;
             font-size: 15px;
           }
         }
-        .alarmImg{
+
+        .alarmImg {
           display: flex;
           flex-direction: column;
           align-items: center;
           justify-content: center;
-          .alarmVideo{
+
+          .alarmVideo {
             width: 60%;
             padding: 10px 0;
             position: relative;
-            .alarmVideoBtn{
+
+            .alarmVideoBtn {
               position: absolute;
               top: 34%;
               left: 42%;
               width: 20%;
               cursor: pointer;
             }
-            .alarmVideoBottom{
+
+            .alarmVideoBottom {
               position: absolute;
-              bottom:6%;
+              bottom: 6%;
               left: 0;
               width: 100%;
               height: 32px;
-              background-color:rgba(20,39,69,0.8);
+              background-color: rgba(20, 39, 69, 0.8);
               display: flex;
               align-items: center;
-              .alarmVideoCircle{
+
+              .alarmVideoCircle {
                 display: inline-block;
                 width: 10px;
                 height: 10px;
@@ -363,7 +426,8 @@
                 border-radius: 50%;
                 margin: 0 14px;
               }
-              .alarmVideoName{
+
+              .alarmVideoName {
                 color: #fff;
                 font-size: 14px;
               }
@@ -373,64 +437,67 @@
       }
     }
   }
-  .nodata{
+
+  .nodata {
     display: flex;
     justify-content: center;
     padding: 20px 0;
   }
-  .alarminfor{
+
+  .alarminfor {
     margin: 12px 0 15px 0;
-    .alarminfornikName{
+
+    .alarminfornikName {
       display: flex;
       justify-content: flex-end;
       align-items: center;
-      .alarminfornikName-title{
+
+      .alarminfornikName-title {
         color: #066fff;
         margin-right: 15px;
       }
-      .alarminfornikNameBg{
+
+      .alarminfornikNameBg {
         width: 24px;
         height: 14px;
         background: url("../../style/ztt/imgs/next.png");
         background-size: 100% 100%;
-      }
-    }
-    .alarminfor-img{
-      float: left;
-      width: 13%;
-      margin: 10px 0 10px 20px;
-      position: relative;
-      .policeImg{
-        width: 100%;
-        height: 100%;
-      }
-      .alarmVideoBtn{
-        position: absolute;
-        top: 34%;
-        left: 42%;
-        width: 18%;
         cursor: pointer;
       }
-      .alarminforBg{
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 28px;
-        background-color:rgba(20,39,69,0.9);
-        display: flex;
-        align-items: center;
-        .alarminforCirle{
-          display: inline-block;
-          width: 10px;
-          height: 10px;
-          background-color: #ff7200;
-          border-radius: 50%;
-          margin: 0 14px;
+    }
+
+    .gutter-example {
+      margin-top: 16px;
+      .gutter-box {
+        position: relative;
+        .alarmVideoBtn{
+          position: absolute;
+          top: 34%;
+          left: 42%;
+          width: 16%;
+          cursor: pointer;
         }
-        .alarminforFont{
-          color: #fff;
-          font-size: 14px;
+        .alarminforBg {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 28px;
+          background-color: rgba(20, 39, 69, 0.9);
+          display: flex;
+          align-items: center;
+          .alarminforCirle {
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            background-color: #ff7200;
+            border-radius: 50%;
+            margin: 0 14px;
+          }
+          .alarminforFont{
+            color: #fff;
+            font-size: 14px;
+          }
         }
       }
     }
