--- a/src/components/homePage/homeModel.less
+++ b/src/components/homePage/homeModel.less
@@ -16,9 +16,18 @@
         width: 400px;
         margin-top: 2px;
         height: 250px;
+        position: relative;
         #homeCanvas{
           width: 100%;
           height: 100%;
+          border: 1px solid #eeeeee;
+        }
+        .nodata{
+          position: absolute;
+          width: 70px;
+          height: 70px;
+          top:34%;
+          left: 30%;
         }
       }
       .homeImg video{
@@ -30,11 +39,8 @@
     }
     .nextHome{
       display: flex;
-      justify-content:flex-end;
+      float: right;
       margin: 9px 8px;
-      position: absolute;
-      bottom: 0;
-      right: 0;
       .nextUp{
         color: #B4B4B4;
         padding: 0 4px;
