--- a/src/components/broadcast/broadcast.less
+++ b/src/components/broadcast/broadcast.less
@@ -39,6 +39,14 @@
   }
   .broContext{
     padding: 20px 0;
+    .nodata{
+      width: 100%;
+      text-align: center;
+    }
+    .nodata img{
+      width: 70px;
+     height: 70px;
+    }
   }
   .borderBot{
     position: relative;
