--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -261,6 +261,10 @@
         height: 360px;
         padding:20px 20px 0 0;
       }
+      .updown Button{
+        display: flex;
+        border: none;
+      }
       .updown{
         height: 40px;
         display: flex;
