布防提交刷新有问题

--- a/src/style/jhy/less/equiplist.less
+++ b/src/style/jhy/less/equiplist.less
@@ -83,9 +83,9 @@
   }
 
   .pagination {
-    position: absolute;
-    bottom: 10px;
-    left: 28%;
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
   }
 
 }
