--- a/src/style/jhy/less/equiplist.less
+++ b/src/style/jhy/less/equiplist.less
@@ -83,9 +83,10 @@
   }
 
   .pagination {
+    position: absolute;
+    bottom: 10px;
     width: 100%;
     text-align: center;
-    margin-top: 10px;
   }
 
 }
