--- a/src/style/jhy/less/equiplist.css
+++ b/src/style/jhy/less/equiplist.css
@@ -69,6 +69,7 @@
 .equip .pagination {
   position: absolute;
   bottom: 10px;
-  left: 28%;
+  width: 100%;
+  text-align: center;
 }
 /*# sourceMappingURL=equiplist.css.map */
