--- a/src/style/jhy/less/equiplist.less
+++ b/src/style/jhy/less/equiplist.less
@@ -83,9 +83,8 @@
   }
 
   .pagination {
-    position: absolute;
-    bottom: 10px;
     width: 100%;
+    padding: 8px 0;
     text-align: center;
   }
 
