--- a/src/style/jhy/less/userinfo.less
+++ b/src/style/jhy/less/userinfo.less
@@ -1,23 +1,22 @@
-.adduser {
-  color: red !important;
+  // .ant-modal-content {
+  //   .ant-modal-close {
+  //     top: 5px !important;
+  //     right: 5px !important;
+  //   }
+  // }
 
-  .ant-modal-confirm .ant-modal-confirm-btns {
-    text-align: center;
-    float: none;
+  .userInfo {
+    padding: 30px;
+
+
+
+    .addbtn {
+      background: #006cff;
+      padding: 5px 20px;
+      color: #fff;
+      box-sizing: content-box;
+    }
+
+
+
   }
-}
-
-
-
-.userInfo {
-  padding: 30px;
-
-
-
-  .addbtn {
-    background: #006cff;
-    padding: 5px 20px;
-    color: #fff;
-    box-sizing: content-box;
-  }
-}
