--- a/src/components/broadcast/broadcast.less
+++ b/src/components/broadcast/broadcast.less
@@ -18,6 +18,7 @@
     align-items: center;
     color: #00ffff;
     background: #142253;
+    padding: 14px 6px;
     .sureBtn{
       border-radius: 1px;
       color: #000;
@@ -50,6 +51,8 @@
   }
   .borderBot{
     position: relative;
+    border: 1px solid #5a5555;
+    min-height: 15vh;
     .videoBtn{
       width: 16%;
       position: absolute;
