--- a/src/style/jhy/less/equiplist.less
+++ b/src/style/jhy/less/equiplist.less
@@ -43,9 +43,6 @@
 
   }
 
-  .card {
-    height: 100%;
-  }
 
   .tit {
     position: absolute;
@@ -67,7 +64,7 @@
   }
 
   .ant-card-actions>li {
-    margin: 10px 0;
+    // margin: 10px 0;
   }
 
   .extra {
