--- a/src/components/login/index.less
+++ b/src/components/login/index.less
@@ -1,12 +1,12 @@
 .Login{
+  background: #fff;
   .ant-input-affix-wrapper{
     height: 40px;
   }
   .login-title{
     width: 15%;
     height: 100px;
-    background: url("../../style/imgs/logo.png") no-repeat;
-    background-size: 100%;
+    padding: 20px 20px;
   }
   .logoBor{
     position: relative;
@@ -21,7 +21,7 @@
       top: 32%;
       left: 61%;
       width: 21%;
-      height: 44vh;
+      min-height: 30vh;
       background: #fff;
       box-shadow: 0px 0px 10px rgba(34, 34, 34, 0.1);
       padding: 30px 50px;
