--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -248,6 +248,7 @@
           flex-direction: column;
           justify-content: center;
           width: 50%;
+          line-height: 26px;
           background: #fff;
           color: #2E4699;
           padding-left: 26px;
@@ -256,12 +257,13 @@
         .eqiIp-UHanld {
           display: flex;
           flex-direction: column;
+          align-items: center;
           justify-content: center;
           width: 50%;
+          line-height: 26px;
           background: #fff;
           margin-left: 4px;
           color: #2E4699;
-          padding-left: 26px;
           overflow: hidden;
           text-overflow: ellipsis;
           white-space: nowrap;
@@ -470,6 +472,9 @@
       margin-top: 16px;
       .gutter-box {
         position: relative;
+        min-height: 14vh;
+        border: 1px solid #d0c9c9;
+        background: #EEEEEE;
         .alarmVideoBtn{
           position: absolute;
           top: 34%;
