--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -1,4 +1,9 @@
 .ploceinfomation{
+  .policeList{
+    min-height: 14vh;
+    border: 1px solid #d0c9c9;
+    background: #EEEEEE;
+  }
   .ant-checkbox-wrapper{
     color: #fff;
   }
