--- a/src/style/jhy/less/userinfo.css
+++ b/src/style/jhy/less/userinfo.css
@@ -1,5 +1,10 @@
-.userInfo .ant-btn .ant-btn-primary {
+.userInfo {
+  padding: 30px;
+}
+.userInfo .addbtn {
   background: #006cff;
-  padding: 2px 4px;
+  padding: 5px 20px;
+  color: #fff;
+  box-sizing: content-box;
 }
 /*# sourceMappingURL=userinfo.css.map */
