--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -252,6 +252,7 @@
           background: #fff;
           color: #2E4699;
           padding-left: 26px;
+          font-size: 15px;
         }
 
         .eqiIp-UHanld {
@@ -267,6 +268,7 @@
           overflow: hidden;
           text-overflow: ellipsis;
           white-space: nowrap;
+          font-size: 15px;
         }
       }
 
