--- a/src/components/main/index.less
+++ b/src/components/main/index.less
@@ -1,8 +1,15 @@
-.Main{
-	.Header{
+.main{
+  /*.Sider{
+    overflow: auto;
+    height: calc(100vh - 64px);
+    position: fixed;
+    left: 0;
+    top:64px
+  }*/
+	/*.Header{
 		 position: fixed;
-		 z-index: 2; 
-		 width: 100% 
+		 z-index: 2;
+		 width: 100%
 	}
 	.Sider{
 		overflow: auto;
@@ -22,5 +29,5 @@
 	.Footer{
 		height:30px;
 		text-align:center
-	}
+	}*/
 }
