--- a/src/style/jhy/less/defendTime.css
+++ b/src/style/jhy/less/defendTime.css
@@ -1,72 +1,70 @@
-* {
+.defendTime {
+  background-color: #e3e3e3;
   box-sizing: border-box;
 }
-body {
-  background-color: #e3e3e3;
-}
-.selected {
+.defendTime .selected {
   background: "#32e8fe";
 }
-#tab {
+.defendTime #tab {
   position: relative;
   margin-left: 50px;
 }
-.tr:first-of-type::before {
+.defendTime .tr:first-of-type::before {
   content: '星期一';
   position: absolute;
   top: 30px;
   left: -60px;
   color: #b9b5b5;
 }
-.tr:nth-of-type(2)::before {
+.defendTime .tr:nth-of-type(2)::before {
   content: '星期二';
   position: absolute;
   top: 80px;
   left: -60px;
   color: #b9b5b5;
 }
-.tr:nth-of-type(3)::before {
+.defendTime .tr:nth-of-type(3)::before {
   content: '星期三';
   position: absolute;
   top: 130px;
   left: -60px;
   color: #b9b5b5;
 }
-.tr:nth-of-type(4)::before {
+.defendTime .tr:nth-of-type(4)::before {
   content: '星期四';
   position: absolute;
   top: 180px;
   left: -60px;
   color: #b9b5b5;
 }
-.tr:nth-of-type(5)::before {
+.defendTime .tr:nth-of-type(5)::before {
   content: '星期五';
   position: absolute;
   top: 230px;
   left: -60px;
   color: #b9b5b5;
 }
-.tr:nth-of-type(6)::before {
+.defendTime .tr:nth-of-type(6)::before {
   content: '星期六';
   position: absolute;
   top: 280px;
   left: -60px;
   color: #b9b5b5;
 }
-.tr:last-of-type::before {
+.defendTime .tr:last-of-type::before {
   content: '星期七';
   position: absolute;
   top: 330px;
   left: -60px;
   color: #b9b5b5;
 }
-.tr :first-of-type .td::before {
+.defendTime .tr :first-of-type .td::before {
   content: '1';
   position: absolute;
   left: 0;
   top: -10;
 }
-.td {
+.defendTime .td {
   position: relative;
   width: 20px;
   height: 20px;
@@ -77,17 +75,17 @@ body {
   border-top: 1px solid #d7d7d7;
   border-bottom: 1px solid #d7d7d7;
 }
-.td:first-of-type {
+.defendTime .td:first-of-type {
   border-left: 1px solid #d7d7d7;
 }
-.td:nth-of-type(48) {
+.defendTime .td:nth-of-type(48) {
   border-right: 1px solid #d7d7d7;
 }
-.td:nth-of-type(49) {
+.defendTime .td:nth-of-type(49) {
   border-top: none;
   border-bottom: none;
 }
-.td:nth-of-type(odd)::before {
+.defendTime .td:nth-of-type(odd)::before {
   content: "";
   display: block;
   width: 1px;
@@ -97,101 +95,101 @@ body {
   top: -10px;
   left: -1px;
 }
-.td:nth-of-type(1)::after {
+.defendTime .td:nth-of-type(1)::after {
   content: "0";
   position: absolute;
   top: -28px;
   left: -5px;
   color: #b9b5b5;
 }
-.td:nth-of-type(5)::after {
+.defendTime .td:nth-of-type(5)::after {
   content: "2";
   position: absolute;
   top: -28px;
   left: -5px;
   color: #b9b5b5;
 }
-.td:nth-of-type(9)::after {
+.defendTime .td:nth-of-type(9)::after {
   content: "4";
   position: absolute;
   top: -28px;
   left: -5px;
   color: #b9b5b5;
 }
-.td:nth-of-type(13)::after {
+.defendTime .td:nth-of-type(13)::after {
   content: "6";
   position: absolute;
   top: -28px;
   left: -5px;
   color: #b9b5b5;
 }
-.td:nth-of-type(17)::after {
+.defendTime .td:nth-of-type(17)::after {
   content: "8";
   position: absolute;
   top: -28px;
   left: -5px;
   color: #b9b5b5;
 }
-.td:nth-of-type(21)::after {
+.defendTime .td:nth-of-type(21)::after {
   content: "10";
   position: absolute;
   top: -28px;
   left: -10px;
   color: #b9b5b5;
 }
-.td:nth-of-type(25)::after {
+.defendTime .td:nth-of-type(25)::after {
   content: "12";
   position: absolute;
   top: -28px;
   left: -10px;
   color: #b9b5b5;
 }
-.td:nth-of-type(29)::after {
+.defendTime .td:nth-of-type(29)::after {
   content: "14";
   position: absolute;
   top: -28px;
   left: -10px;
   color: #b9b5b5;
 }
-.td:nth-of-type(33)::after {
+.defendTime .td:nth-of-type(33)::after {
   content: "16";
   position: absolute;
   top: -28px;
   left: -10px;
   color: #b9b5b5;
 }
-.td:nth-of-type(37)::after {
+.defendTime .td:nth-of-type(37)::after {
   content: "18";
   position: absolute;
   top: -28px;
   left: -10px;
   color: #b9b5b5;
 }
-.td:nth-of-type(41)::after {
+.defendTime .td:nth-of-type(41)::after {
   content: "20";
   position: absolute;
   top: -28px;
   left: -10px;
   color: #b9b5b5;
 }
-.td:nth-of-type(45)::after {
+.defendTime .td:nth-of-type(45)::after {
   content: "22";
   position: absolute;
   top: -28px;
   left: -10px;
   color: #b9b5b5;
 }
-.td:nth-of-type(49)::after {
+.defendTime .td:nth-of-type(49)::after {
   content: "24";
   position: absolute;
   top: -26px;
   left: -10px;
   color: #b9b5b5;
 }
-.td:nth-of-type(49)::before {
+.defendTime .td:nth-of-type(49)::before {
   content: none;
 }
-.td:nth-of-type(even)::before {
+.defendTime .td:nth-of-type(even)::before {
   content: "";
   display: block;
   width: 1px;
@@ -201,7 +199,7 @@ body {
   top: -6px;
   left: -1px;
 }
-.td:nth-of-type(48)::after {
+.defendTime .td:nth-of-type(48)::after {
   content: "";
   display: block;
   width: 1px;
@@ -211,13 +209,13 @@ body {
   top: -10px;
   left: 12px;
 }
-.deleteWrap .ant-btn:hover,
-.deleteWrap .ant-btn:focus {
+.defendTime .deleteWrap .ant-btn:hover,
+.defendTime .deleteWrap .ant-btn:focus {
   color: red;
   background-color: #fff;
   border-color: red;
 }
-.deleteWrap .delete {
+.defendTime .deleteWrap .delete {
   margin-top: 19px;
   color: red;
 }
