--- a/src/style/jhy/less/userinfo.less
+++ b/src/style/jhy/less/userinfo.less
@@ -4,19 +4,15 @@
   //     right: 5px !important;
   //   }
   // }
-
   .userInfo {
     padding: 30px;
-
-
-
     .addbtn {
       background: #006cff;
       padding: 5px 20px;
       color: #fff;
       box-sizing: content-box;
     }
-
-
-
+    .del{
+      padding: 0 6px;
+    }
   }
