--- a/src/style/jhy/less/netset.less
+++ b/src/style/jhy/less/netset.less
@@ -10,7 +10,8 @@
     display: inline-block;
     background: #006cff;
     color: #fff;
-    padding: 5px 20px;
+    padding: 10px 30px;
+    border-radius: 2px;
     margin-bottom: 10px;
   }
 
@@ -19,7 +20,7 @@
     text-align: center;
 
     .submit {
-      background: #4a96fd;
+      // background: #4a96fd;
       color: #fff;
     }
 
