--- a/src/style/jhy/less/overview.less
+++ b/src/style/jhy/less/overview.less
@@ -7,6 +7,13 @@
     border: 0;
   }
 
+
+
+  .ant-descriptions .ant-descriptions-item-label,
+  .ant-descriptions .ant-descriptions-item-content {
+    padding: 8px 12px;
+  }
+
   .ant-card-head-title {
     font-size: 20px;
   }
@@ -38,15 +45,14 @@
   }
 
   .topwrap {
-    height: 37%;
+    height: 38%;
 
-    .desc {
-      margin-top: 10px;
-    }
 
     .cpu {
       .desc:first-of-type {
         color: #006cff;
+        margin-top: 50px;
+
 
         .bluedot {
           background: #006cff;
@@ -55,6 +61,7 @@
 
       .desc:last-of-type {
         color: #dcdbe0;
+        margin-top: 10px;
 
         .graydot {
           background: #dcdbe0;
@@ -66,6 +73,7 @@
     .disk {
       .desc:first-of-type {
         color: #006cff;
+        margin-top: 40px;
 
         .bluedot {
           background: #006cff;
@@ -74,6 +82,7 @@
 
       .desc:nth-of-type(2) {
         color: #ff7200;
+        margin-top: 10px;
 
         .orangedot {
           background: #ff7200;
@@ -82,6 +91,7 @@
 
       .desc:last-of-type {
         color: #32e8fe;
+        margin-top: 10px;
 
         .lightbluedot {
           background: #32e8fe;
@@ -96,26 +106,20 @@
     height: 20%;
 
     .ossys {
+      .cpuval {
+        width: 40%;
+        margin-left: 30px;
 
-      .syslabel {
-        display: inline-block;
-        width: 25%;
-        font-size: 16px;
-        color: #2c459a;
-        text-align: right;
-      }
-
-      .prog {
-        margin-left: 20px;
-        width: 60%;
-        position: relative;
+        .ant-progress-outer {
+          padding-right: 0;
+        }
 
         .ant-progress-inner {
-          height: 25px;
+          width: 100%;
 
           .ant-progress-bg {
             background: #006cff;
-            height: 25px !important;
+            height: 26px !important;
           }
         }
 
@@ -127,12 +131,52 @@
         }
       }
 
+      .syslabel {
+        display: inline-block;
+        width: 25%;
+        font-size: 16px;
+        color: #2c459a;
+        text-align: right;
+      }
+
+      .prog {
+        display: inline-block;
+        height: 30px;
+        line-height: 30px;
+        border-radius: 15px;
+        text-align: center;
+        color: #fff;
+        margin-left: 30px;
+        background: #006cff;
+        width: 40%;
+        position: relative;
+
+
+      }
+
     }
 
   }
 
 
   .botwrap {
+    .funset {
+
+      .alarmLabel {
+        padding: 5px 10px;
+        border-radius: 2px;
+        background: #f3f3f5;
+        color: #2c459a;
+      }
+
+      .alarmSound {
+        margin-left: 20px;
+      }
+
+      .ant-switch-checked {
+        background-color: #006cff;
+      }
+    }
 
     .ant-list-split .ant-list-item {
       border: 1px solid #f0f0f0;
