--- a/src/style/jhy/less/equiplist.less
+++ b/src/style/jhy/less/equiplist.less
@@ -2,6 +2,7 @@
   height: 100%;
   padding: 30px;
   position: relative;
+  background: #f8f8f8;
 
   .clearfix::after {
     content: '';
@@ -24,60 +25,100 @@
   }
 
   .equipWrap {
-    position: relative;
 
-    .deleteEquip {
-      font-size: 30px;
-      position: absolute;
-      color: #fff;
-      top: 5px;
-      right: 10px;
-      z-index: 10;
 
+    .equipEle {
+      width: 100%;
+      height: 100%;
+      position: relative;
+
+      .extraWrap {
+        border: 1px solid #efefef;
+        height: 18%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        .extra {
+          padding: 5px 10px;
+          width: 33%;
+          border-right: 1px solid #e3e5eb;
+          text-align: center;
+          font-size: 14px;
+          display: inline-flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+        }
+
+        .extra:first-of-type {
+          .expic {
+            width: 20px;
+            height: 20px;
+            display: inline-block;
+            margin-right: 10px;
+            background: url('../imgs/online.png') no-repeat left center
+          }
+        }
+
+        .extra:nth-of-type(2) {
+
+          .expic {
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+            display: inline-block;
+            background: url('../imgs/def.png') no-repeat left center
+          }
+        }
+
+        .extra:last-of-type {
+          border-right: none;
+
+          .expic {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+            background: url('../imgs/set.png') no-repeat left center
+          }
+
+        }
+      }
+
+      .tit {
+        position: absolute;
+
+        bottom: 0;
+        left: 0;
+        background: rgba(36, 52, 74, .8);
+        color: #fff;
+        width: 100%;
+        padding: 8px 4px;
+
+        .titpoint {
+          display: inline-block;
+          width: 10px;
+          height: 10px;
+          background: #fe7200;
+          border-radius: 5px;
+          margin: 0 10px;
+        }
+      }
     }
-  }
 
-
-  .ant-card-body {
-    padding: 0;
 
   }
 
 
-  .tit {
-    position: absolute;
-    bottom: 45px;
-    left: 0;
-    background: rgba(36, 52, 74, .8);
-    color: #fff;
-    width: 100%;
-    padding: 1px 4px;
 
-    .titpoint {
-      display: inline-block;
-      width: 10px;
-      height: 10px;
-      background: #fe7200;
-      border-radius: 5px;
-      margin: 0 10px;
-    }
-  }
 
-  .ant-card-actions>li {
-    // margin: 10px 0;
-  }
 
-  .extra {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
 
-    img {
-      width: 16px;
-      height: 16px;
-      margin-right: 10px;
-    }
-  }
+
+
+
+
 
   .pagination {
     width: 100%;
